<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_item_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardMargin"
        android:layout_marginStart="@dimen/cardMargin"
        android:layout_marginEnd="@dimen/cardMargin"
        android:elevation="@dimen/cardElevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textmargin"
                android:hint="@string/name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textmargin"
                android:hint="@string/email"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textmargin"
                android:hint="@string/phone"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
        </LinearLayout>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textmargin"
                android:layout_marginEnd="@dimen/textmargin"
                android:hint="@string/address"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <TextView
                android:id="@+id/social_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/textmargin"
                android:hint="@string/social_security"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/zero"
                    android:layout_height="@dimen/zero"
                    android:layout_weight=".5"
                    />

                <TextView
                    android:id="@+id/owed"
                    android:layout_width="@dimen/zero"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/textmargin"
                    android:layout_weight=".5"
                    android:hint="@string/moneyOwed"
                    android:gravity="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>


        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>